# JCIIOT2026

./: .gitattributes  .gitignore
JCIIOT2026/: MUJOCO_LOG.TXT  README.md  app.py  pyproject.toml  test_skill_pipeline.py
JCIIOT2026/knowledge/: command_examples.md  constraints.md  robot_params.json  sop4.md  task_config.json
JCIIOT2026/new/mujoco_original/: scene.xml  scene_robosuite.xml
JCIIOT2026/recordings/FactorySorting1_3FO3ERFHISEM/: result_20260629_164216.json  result_20260629_164544.json  result_20260629_164819.json  score_20260629_164216_OK.json  score_20260629_164544_OK.json  score_20260629_164819_OK.json  trajectory_20260629_164819_OK.json
JCIIOT2026/robomimic/algo/: __init__.py
JCIIOT2026/robomimic/envs/: wrappers.py
JCIIOT2026/robosuite/: =3.3.0
JCIIOT2026/robosuite/robosuite/: model_epoch_150.pth
JCIIOT2026/robosuite/robosuite/scripts/: collect_human_demonstrations.py  collect_plastic_crate_scripted_demos.py  playback_demonstrations_from_hdf5.py
JCIIOT2026/sop+prompt/: JCIIOT 2026 case 5 SOP.docx
JCIIOT2026/src/competition_platform/interface/: skill_contract.py
JCIIOT2026/src/robot_agent/: __init__.py  __main__.py  config.py  task_subprocess_runner.py
JCIIOT2026/src/robot_agent/core/: knowledge_manager.py  memory.py  navigation.py  planner.py  registry.py  types.py
JCIIOT2026/src/robot_agent/environments/: __init__.py
JCIIOT2026/src/robot_agent/skills/: knowledge_mgr.py  memory_mgr.py  move.py  (+1 more)
JCIIOT2026/src/robot_agent_v2.egg-info/: SOURCES.txt  entry_points.txt
JCIIOT2026/team_submission/knowledge/: _index.json  my_strategy.md
(+150 files in other folders)
